# python-repo-template

./: .gitignore  AGENTS.md  Makefile  README.md  copier.yml  copier_extensions.py  poe_tasks.toml  pyproject.toml
.githooks/: pre-commit
docs/features/templating/: dialogue.md  python-repo-templating-plan.md
scripts/: render_validate.py  secret_scan.py
src/template/: __init__.py  cli.py
template/: AGENTS.md  CONTRIBUTING.md  Makefile.jinja  README.md.jinja  poe_tasks.toml.jinja  pyproject.toml.jinja
template/.githooks/: pre-commit.jinja
template/scripts/: clean.py
template/src/{{ package_name }}/: __init__.py.jinja  cli.py.jinja
template/src/{{ package_name }}/devtools/: secret_scan.py
template/tests/: test_cli_smoke.py.jinja  test_secret_scan.py.jinja
tests/: test_cli_smoke.py  test_copier_extensions.py  test_render_validate.py  test_secret_scan.py
