[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "python-repo-template-engine"
version = "0.1.0"
description = "Template engine and validation tooling for the python repo scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "copier>=9,<10",
]

[dependency-groups]
dev = [
  "poethepoet>=0.32,<1",
  "pyright>=1.1.408",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = "warning"
include = ["copier_extensions.py", "scripts", "tests"]
exclude = [
  ".venv",
  ".venv/**",
  ".venv-*",
  ".venv-*/**",
  "**/.venv",
  "**/.venv/**",
  "**/.venv-*",
  "**/.venv-*/**",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".pytest_cache",
  ".ruff_cache",
  ".mypy_cache",
  ".pyright",
  "build",
  "dist",
  "template",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poe]
include = "poe_tasks.toml"
